src/objects/ApiToken__c.object
<CustomObject>
    <fields>
        <fullName>ApiName__c</fullName>
        <description>Identifies the API that the token applies to.</description>
        <inlineHelpText>The value in this field must match the value returned by the APEX code OAuth1.IConfiguration.getApiName().  The name itself is for internal use and can contain any value that is meaningful to a user.</inlineHelpText>
        <label>API Name</label>
        <picklist>
            <picklistValues>
                <fullName>Intuit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProviderData__c</fullName>
        <inlineHelpText>Additional parameters that the connected application provided with the token.</inlineHelpText>
        <label>Provider Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Realm__c</fullName>
        <label>Realm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Active tokens can be used to call API functionality.  
Temporary tokens are used during the OAuth authorisation flow.
Tokens are marked as Expired if the server returns an &apos;401&apos; error during its use</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TokenSecret__c</fullName>
        <label>Token Secret</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>API Token</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OA-{000000}</displayFormat>
        <label>Token</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Tokens</pluralLabel>
    <recordTypes>
        <fullName>Intuit</fullName>
        <active>true</active>
        <description>Intuit OAuth tokens for Quickbooks</description>
        <label>Intuit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>